--- a/nom-ui/src/app/auth/components/login/login.component.html
+++ b/nom-ui/src/app/auth/components/login/login.component.html
@@ -1,70 +1,57 @@
-<div class="login">
-  <mat-card class="login__card">
-    <mat-card-header class="login__header">
-      <mat-card-title class="login__title">Welcome Back!</mat-card-title>
-      <mat-card-subtitle class="login__subtitle"
+<div class="nom-page-container login">
+  <mat-card class="nom-card">
+    <mat-card-header class="nom-card__header">
+      <mat-card-title class="nom-card__title">Welcome Back!</mat-card-title>
+      <mat-card-subtitle class="nom-card__subtitle"
         >Sign in to your account</mat-card-subtitle
       >
     </mat-card-header>
+    @if (isLoading) {
     <mat-progress-bar
-      *ngIf="isLoading"
       mode="indeterminate"
       color="primary"
-      class="login__progress-bar"
+      class="nom-card__progress-bar"
     ></mat-progress-bar>
-    <mat-card-content class="login__content">
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login__form">
-        <mat-form-field appearance="outline" class="login__form-field">
+    }
+    <mat-card-content class="nom-card__content">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="nom-form">
+        <mat-form-field appearance="outline" class="nom-form__field">
           <mat-label>Email Address</mat-label>
           <input
             matInput
             type="email"
             formControlName="email"
             required
-            class="login__input"
+            class="nom-form__input"
           />
-          <mat-icon matSuffix class="login__icon">email</mat-icon>
-          <mat-error
-            *ngIf="loginForm.get('email')?.hasError('required')"
-            class="login__error"
-          >
-            Email is required.
-          </mat-error>
-          <mat-error
-            *ngIf="loginForm.get('email')?.hasError('email')"
-            class="login__error"
-          >
+          <mat-icon matSuffix class="nom-form__icon">email</mat-icon>
+          @if (loginForm.get('email')?.hasError('required')) {
+          <mat-error class="nom-form__error"> Email is required. </mat-error>
+          } @if (loginForm.get('email')?.hasError('email')) {
+          <mat-error class="nom-form__error">
             Please enter a valid email address.
           </mat-error>
+          }
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="login__form-field">
+        <mat-form-field appearance="outline" class="nom-form__field">
           <mat-label>Password</mat-label>
           <input
             matInput
             type="password"
             formControlName="password"
             required
-            class="login__input"
+            class="nom-form__input"
           />
-          <mat-icon matSuffix class="login__icon">lock</mat-icon>
-          <mat-error
-            *ngIf="loginForm.get('password')?.hasError('required')"
-            class="login__error"
-          >
-            Password is required.
-          </mat-error>
+          <mat-icon matSuffix class="nom-form__icon">lock</mat-icon>
+          @if (loginForm.get('password')?.hasError('required')) {
+          <mat-error class="nom-form__error"> Password is required. </mat-error>
+          }
         </mat-form-field>
 
         <div class="login__options-row">
-          <mat-checkbox
-            formControlName="rememberMe"
-            class="login__remember-me-checkbox"
-            >Remember Me</mat-checkbox
-          >
-          <a routerLink="/forgot-password" class="login__forgot-password-link"
-            >Forgot Password?</a
-          >
+          <mat-checkbox formControlName="rememberMe">Remember Me</mat-checkbox>
+          <a routerLink="/forgot-password" class="nom-link">Forgot Password?</a>
         </div>
 
         <button
@@ -72,24 +59,24 @@
           color="primary"
           type="submit"
           [disabled]="loginForm.invalid || isLoading"
-          class="login__button"
+          class="nom-button"
         >
-          <span *ngIf="!isLoading">Sign In</span>
+          @if (!isLoading) {
+          <span>Sign In</span>
+          } @if (isLoading) {
           <mat-spinner
-            *ngIf="isLoading"
             [diameter]="20"
-            class="login__spinner"
+            class="nom-button__spinner"
           ></mat-spinner>
+          }
         </button>
       </form>
     </mat-card-content>
-    <mat-card-footer class="login__footer">
-      <div class="login__register-link">
+    <mat-card-footer class="nom-card__footer">
+      <p class="nom-prompt-text">
         New to our platform?
-        <a routerLink="/register" class="login__register-link-anchor"
-          >Create an Account</a
-        >
-      </div>
+        <a routerLink="/register" class="nom-link">Create an Account</a>
+      </p>
     </mat-card-footer>
   </mat-card>
 </div>
